--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -19,7 +19,7 @@ stages:
           
         - task: Maven@4
           inputs:
-            mavenPomFile: 'pom.xml'
+            mavenPomFile: 'Project/pom.xml'
             publishJUnitResults: false
             javaHomeOption: 'JDKVersion'
             mavenVersionOption: 'Default'
