--- a/Project/pom.xml
+++ b/Project/pom.xml
@@ -18,11 +18,25 @@
 			<version>2.2</version>
 			<scope>test</scope>
 		</dependency>
-
-	</dependencies>
+		<!-- 
+		<dependency>
+			<groupId>org.sonarsource.scanner.maven</groupId>
+			<artifactId>sonar-maven-plugin</artifactId>
+			<version>3.2</version>
+		</dependency>
 	
+	<profiles>
+		<profile>
+			<id>sonar</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+		</profile>
+	</profiles>
+-->
+	</dependencies>
 	<properties>
 		<sonar.organization>lbte93</sonar.organization>
-		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.host.url>https://localhost:9000</sonar.host.url>
 	</properties>
 </project>
