--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -27,12 +27,10 @@ stages:
             mavenAuthenticateFeed: false
             effectivePomSkip: false
             sonarQubeRunAnalysis: false
+            
+        - script: cd Project
+          displayName: 'Go inside the Project directory'
 
-        #- script: mvn package
-        #  displayName: 'Execute the build of the project'
+        - script: mvn package
+          displayName: 'Execute the build of the project'
         
-        - script: pwd
-          displayName: 'Check current directory'
-          
-        - script: ls
-          displayName: 'Show files in the current directory'
